fix: remove tooltip-caused horizontall scroll by setting overflow hidden on body

--- a/client/src/components/Tooltip/Tooltip.module.scss
+++ b/client/src/components/Tooltip/Tooltip.module.scss
@@ -25,7 +25,7 @@
   row-gap: 5px;
   visibility: hidden;
   padding: 20px 30px;
-  z-index: 1;
+  z-index: 10;
 
   border-radius: 3px;
   opacity: 0;
