--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -20,4 +20,5 @@ img {
 
 body {
   background-color: $gray-09;
+  overflow-x: hidden;
 }
